# zip-to-parquet-py

./: Cargo.toml  devenv.nix  pyproject.toml  test.py
src/: lib.rs
