[package]
name = "zip-to-parquet-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zip_to_parquet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
parquet = "50.0.0"
zip = "0.6.6"
sha2 = "0.10.8"
arrow-schema = "50.0.0"
arrow-array = "50.0.0"
threadpool = "1.8.1"
wax = "0.6.0"

